add lecture notebook with notes

--- a/Phase2/23-Hypothesis-Ttest-st.ipynb
+++ b/Phase2/23-Hypothesis-Ttest-st.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T17:40:16.587139Z",
@@ -797,7 +797,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### State the null and alternative hypotheses**\n"
+    "### State the null and alternative hypotheses\n",
+    "Null : size of the latte is not different in Manhattan and Brooklyn\n"
    ]
   },
   {
@@ -831,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T00:48:45.971364Z",
@@ -840,14 +841,12 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "13.63636363636363"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.63636363636363\n",
+      "2.4921594731575762\n"
+     ]
     }
    ],
    "source": [
@@ -857,7 +856,38 @@
     "n = 25\n",
     "\n",
     "t = (x-mu)/(s/np.sqrt(n))\n",
-    "t"
+    "print(t) #t-value\n",
+    "print(stats.t.ppf(.99,n-1) ) # t-critical \n",
+    "#we reject null because t-value is much greater than the t-critical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.5.2'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.__version__"
    ]
   },
   {
@@ -1586,7 +1616,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1600,7 +1630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
