--- a/Phase2/completed/18-Probability-Introduction_complete.ipynb
+++ b/Phase2/completed/18-Probability-Introduction_complete.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,6 +282,26 @@
    ],
    "source": [
     "len(list(itertools.permutations(range(0, 30), 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1365"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(itertools.combinations(range(1,16),4)))"
    ]
   },
   {
@@ -1832,7 +1852,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python (learn-env)",
    "language": "python",
    "name": "learn-env"
   },
