--- a/Phase2/warmups/warmup1.ipynb
+++ b/Phase2/warmups/warmup1.ipynb
@@ -63,15 +63,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Your function:\n",
     "\n",
     "def minSum(numberlist):\n",
+    "    new_list=numberlist\n",
+    "    smallest_sum = 0\n",
+    "\n",
+    "    while len(new_list) != 0:\n",
+    "        max_num = max(numberlist)\n",
+    "        min_num = min(numberlist)\n",
+    "        smallest_sum += max_num * min_num\n",
+    "        new_list.remove(max_num)\n",
+    "        new_list.remove(min_num)\n",
     "    \n",
     "    return smallest_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minSum([9,2,8,7,5,4,0,6])"
    ]
   },
   {
@@ -79,12 +108,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# or David's code \n",
+    "def minSum(numberlist):\n",
+    "    \n",
+    "    num_list = sorted(numberlist)\n",
+    "    length = len(num_list)\n",
+    "    half = length // 2\n",
+    "    smallest_sum = 0\n",
+    "\n",
+    "    for num in range(0,half):\n",
+    "        print(f'num = {num} largest = {num_list[(length-1) - num]} smallest = {num_list[num]}')\n",
+    "        \n",
+    "        smallest_sum += (num_list[num] * num_list[(length-1) - num])\n",
+    "\n",
+    "    return smallest_sum"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python (learn-env)",
    "language": "python",
    "name": "learn-env"
   },
@@ -98,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
