--- a/Phase2/18-Probability-Introduction.ipynb
+++ b/Phase2/18-Probability-Introduction.ipynb
@@ -181,24 +181,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24360.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Can use math:\n",
     "import math\n",
-    "\n"
+    "\n",
+    "n = 30\n",
+    "r = 3\n",
+    "math.factorial(n) / math.factorial(n - r)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24360"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Also the python library itertools has combination and permutations!\n",
     "import itertools\n",
-    "\n"
+    "\n",
+    "len(list(itertools.permutations(range(1,31), 3)))"
    ]
   },
   {
@@ -216,16 +242,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate it:\n",
     "\n",
+    "\n",
+    "40**3\n",
     "# Why can't we use itertools?\n",
     "# Because their permutation function doesn't allow for replacement (alas)"
    ]
@@ -254,28 +293,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Using math\n"
+    "# Using math\n",
+    "n = 8\n",
+    "r = 3\n",
+    "\n",
+    "math.factorial(n) / (math.factorial(r)*math.factorial(n - r))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Our list of toppings\n",
     "toppings = [\"Mushrooms\", \"Pepperoni\", \"Onion\", \"Peppers\", \n",
     "            \"Ham\", \"Pineapple\", \"Sausage\", \"Olives\"]\n",
     "\n",
-    "# Using itertools\n"
+    "# Using itertools\n",
+    "len(list(itertools.combinations(toppings, 3)))"
    ]
   },
   {
@@ -505,33 +571,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import pandas\n"
+    "# Import pandas\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>edible-poisonous</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>bruised</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>poisonous</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>black</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>edible</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>black</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>edible</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>brown</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>poisonous</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>brown</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>edible</td>\n",
+       "      <td>crowded</td>\n",
+       "      <td>tapering</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>black</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  edible-poisonous gill-spacing stalk-shape stalk-color-above-ring  \\\n",
+       "0        poisonous        close   enlarging                  white   \n",
+       "1           edible        close   enlarging                  white   \n",
+       "2           edible        close   enlarging                  white   \n",
+       "3        poisonous        close   enlarging                  white   \n",
+       "4           edible      crowded    tapering                  white   \n",
+       "\n",
+       "  stalk-color-below-ring gill-color  bruised  \n",
+       "0                  white      black     True  \n",
+       "1                  white      black     True  \n",
+       "2                  white      brown     True  \n",
+       "3                  white      brown     True  \n",
+       "4                  white      black    False  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Read in the data, check the first few rows\n"
+    "# Read in the data, check the first few rows\n",
+    "\n",
+    "df = pd.read_csv('data/Mushrooms_cleaned.csv')\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>edible-poisonous</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>bruised</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8124</td>\n",
+       "      <td>8124</td>\n",
+       "      <td>8124</td>\n",
+       "      <td>8124</td>\n",
+       "      <td>8124</td>\n",
+       "      <td>8124</td>\n",
+       "      <td>8124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>edible</td>\n",
+       "      <td>close</td>\n",
+       "      <td>tapering</td>\n",
+       "      <td>white</td>\n",
+       "      <td>white</td>\n",
+       "      <td>buff</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>4208</td>\n",
+       "      <td>6812</td>\n",
+       "      <td>4608</td>\n",
+       "      <td>4464</td>\n",
+       "      <td>4384</td>\n",
+       "      <td>1728</td>\n",
+       "      <td>4748</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       edible-poisonous gill-spacing stalk-shape stalk-color-above-ring  \\\n",
+       "count              8124         8124        8124                   8124   \n",
+       "unique                2            2           2                      9   \n",
+       "top              edible        close    tapering                  white   \n",
+       "freq               4208         6812        4608                   4464   \n",
+       "\n",
+       "       stalk-color-below-ring gill-color bruised  \n",
+       "count                    8124       8124    8124  \n",
+       "unique                      9         12       2  \n",
+       "top                     white       buff   False  \n",
+       "freq                     4384       1728    4748  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Describe the dataset\n"
+    "# Describe the dataset\n",
+    "df.describe()"
    ]
   },
   {
@@ -549,11 +821,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4155588380108321"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Let's find our bruised mushrooms\n"
+    "# Let's find our bruised mushrooms\n",
+    "df['bruised'].value_counts()[1] / len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    0.584441\n",
+       "True     0.415559\n",
+       "Name: bruised, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['bruised'].value_counts(normalize = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3376"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.loc[df['bruised'] == True])"
    ]
   },
   {
@@ -567,11 +893,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>edible-poisonous</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>bruised</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5492</th>\n",
+       "      <td>edible</td>\n",
+       "      <td>close</td>\n",
+       "      <td>enlarging</td>\n",
+       "      <td>red</td>\n",
+       "      <td>white</td>\n",
+       "      <td>red</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     edible-poisonous gill-spacing stalk-shape stalk-color-above-ring  \\\n",
+       "5492           edible        close   enlarging                    red   \n",
+       "\n",
+       "     stalk-color-below-ring gill-color  bruised  \n",
+       "5492                  white        red     True  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's see what we get with a quick sample row...\n",
     "df.sample(1)"
@@ -599,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -607,21 +991,35 @@
    },
    "outputs": [],
    "source": [
-    "# Use loc to find where they're bruised and edible\n"
+    "# Use loc to find where they're bruised and edible\n",
+    "df_bruised_edible = df.loc[(df['bruised'] == True) & (df['edible-poisonous'] == 'edible')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33874938453963566"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculate the probability"
+    "# Calculate the probability\n",
+    "\n",
+    "len(df_bruised_edible) / len(df)"
    ]
   },
   {
@@ -877,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,11 +1297,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_orange_stalk == (p_orange_above + p_orange_below)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_orange_stalk == (p_orange_above + p_orange_below)"
+    "p_both_orange = p_orange_stalk = df[(df['stalk-color-above-ring'] == 'orange')\n",
+    "                    & (df['stalk-color-below-ring'] == 'orange')\n",
+    "                    ].shape[0]/df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_orange_stalk == (p_orange_above + p_orange_below - p_both_orange)"
    ]
   },
   {
@@ -925,7 +1365,7 @@
    "outputs": [],
    "source": [
     "# Find P(edible | orange stalk)\n",
-    "p_edible_and_orange = None\n"
+    "p_edible_and_orange = \n"
    ]
   },
   {
@@ -966,7 +1406,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python (learn-env)",
    "language": "python",
    "name": "learn-env"
   },
