--- a/Phase2/22-Hypothesis_Ztest.ipynb
+++ b/Phase2/22-Hypothesis_Ztest.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce6ee8f3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -18,7 +17,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea1dcf2c",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -38,7 +36,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f6504d",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -60,7 +57,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80321a50",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -76,7 +72,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aae9a8e",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -91,7 +86,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4671f5d5",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -113,7 +107,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7f023de",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -128,7 +121,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69c4d0c7",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -147,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "79f8bb3d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T15:12:30.552728Z",
@@ -168,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c62371a8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T02:54:36.820658Z",
@@ -197,7 +187,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10270e43",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -209,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f633508",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T13:05:03.352252Z",
@@ -227,7 +215,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08db895b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T13:11:39.152195Z",
@@ -243,7 +230,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d75ce72",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-15T13:43:26.672264Z",
@@ -261,7 +247,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78743606",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T13:13:47.839406Z",
@@ -278,7 +263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b81e597",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -290,7 +274,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd2d5da",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T02:55:57.358346Z",
@@ -308,7 +291,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cec6657",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -320,7 +302,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8dfdb61",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -332,7 +313,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b269d73",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -344,8 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b131c8b5",
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T02:59:37.587335Z",
@@ -362,7 +341,7 @@
        "2.3499999999999943"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +368,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1eb31990",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T02:59:40.034154Z",
@@ -419,7 +397,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57f61acc",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -431,7 +408,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ab761b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -445,7 +421,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a1f2c22",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -461,7 +436,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e86b6ac",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -473,7 +447,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a50b8c4",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -485,7 +458,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b165bebe",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -497,7 +469,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940db338",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -510,7 +481,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "435bc09a",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -522,7 +492,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4c0782",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -536,7 +505,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3dc12f",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -549,7 +517,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f804b571",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -561,7 +528,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ad6942e",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -573,7 +539,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81dbc378",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -586,7 +551,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08586b66",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -598,7 +562,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3ecf020",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -610,7 +573,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de4722e",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -618,13 +580,13 @@
    },
    "source": [
     "Answer:\n",
-    "\n",
+    "Null Hypoth: Drug Does Not work\n",
+    "Alternative Hypoth: Drug works\n",
     "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45b324a5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -636,7 +598,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95429381",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -644,20 +605,13 @@
    },
    "source": [
     "\n",
-    "Answer:"
+    "Answer:\n",
+    "Null Hypoth: No significant decrease in conversion rate (Cn = Co)\n",
+    "Alt: Significant decrease in conversion rate \n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72ebc1f0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "0b8facbd",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -669,7 +623,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8570e705",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -677,12 +630,13 @@
    },
    "source": [
     "    \n",
-    "  Anwer:"
+    "  Anwer:\n",
+    "  Null: St = Sa\n",
+    "  Alt: (St < Sa) or (St > Sa)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c834955c",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -694,7 +648,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d44508e",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -702,12 +655,12 @@
    },
    "source": [
     "\n",
-    "    Answer"
+    "    Answer:\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e8880957",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -719,7 +672,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f907e0ba",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -732,7 +684,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4430e021",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -744,7 +695,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13864090",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -756,7 +706,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4624b5f",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -770,7 +719,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8e1643",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -782,7 +730,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f1b071",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -794,7 +741,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62419f37",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -806,7 +752,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c9a65ef",
    "metadata": {},
    "source": [
     "Today we will focus on performing a **$z$-test** which is a hypothesis test that uses the normal curve. So we will find the $z$-score of our sample's mean also known as our **$z$-statistic** in the context of hypothesis testing.\n",
@@ -818,7 +763,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "733b15a4",
    "metadata": {},
    "source": [
     "<img src='images/z-test.jpg' width='600px'>"
@@ -826,7 +770,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6258c8",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -838,7 +781,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf5cd01",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -852,7 +794,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46bd9bac",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -864,7 +805,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cdb12f3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -876,7 +816,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e565294b",
    "metadata": {},
    "source": [
     "## STEP 5: Interpret p-value"
@@ -885,14 +824,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "190a7152",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a2129240",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -904,7 +841,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f23fc19",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -916,31 +852,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "007f53f6",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "source": [
-    "What is our null hypothesis?"
+    "What is our null hypothesis?\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c85e654e",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
    "source": [
-    "Answer:"
+    "Answer: the mean weight of the elephants is not significantly different than Gabonese elephants"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a40ae33b",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -952,19 +886,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cba4872",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "source": [
-    "Answer:"
+    "Answer: is significantly less"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "257beff4",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -976,19 +908,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f5cab00",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
    "source": [
-    "Answer: "
+    "Answer: .05"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cfb2f897",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1002,8 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23901c48",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T14:19:23.222699Z",
@@ -1013,13 +942,33 @@
      "slide_type": "slide"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9946278038481846"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu = 9000\n",
+    "xbar = 8637\n",
+    "sigma = 900\n",
+    "n = 40\n",
+    "\n",
+    "z = (xbar - mu) / (sigma/np.sqrt(n))\n",
+    "\n",
+    "p=stats.norm.sf(z)\n",
+    "p"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29736f59",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-03-16T14:20:00.986097Z",
@@ -1035,7 +984,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2405ee47",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1043,7 +991,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "862e3ba0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1052,7 +999,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1066,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
