--- a/Phase4/54-a-surprise.ipynb
+++ b/Phase4/54-a-surprise.ipynb
@@ -11,8 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:29:34.331242Z",
+     "start_time": "2022-04-25T19:29:32.992647Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import surprise\n",
@@ -35,9 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:29:55.077327Z",
+     "start_time": "2022-04-25T19:29:34.914029Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset ml-100k could not be found. Do you want to download it? [Y/n] Y\n",
+      "Trying to download dataset from http://files.grouplens.org/datasets/movielens/ml-100k.zip...\n",
+      "Done! Dataset ml-100k has been saved to /Users/Alice/.surprise_data/ml-100k\n"
+     ]
+    }
+   ],
    "source": [
     "data = surprise.Dataset.load_builtin('ml-100k')"
    ]
@@ -51,9 +71,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:30:01.204986Z",
+     "start_time": "2022-04-25T19:30:01.130569Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>item</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>196</td>\n",
+       "      <td>242</td>\n",
+       "      <td>3</td>\n",
+       "      <td>881250949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>186</td>\n",
+       "      <td>302</td>\n",
+       "      <td>3</td>\n",
+       "      <td>891717742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22</td>\n",
+       "      <td>377</td>\n",
+       "      <td>1</td>\n",
+       "      <td>878887116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>244</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2</td>\n",
+       "      <td>880606923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>166</td>\n",
+       "      <td>346</td>\n",
+       "      <td>1</td>\n",
+       "      <td>886397596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>880</td>\n",
+       "      <td>476</td>\n",
+       "      <td>3</td>\n",
+       "      <td>880175444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>716</td>\n",
+       "      <td>204</td>\n",
+       "      <td>5</td>\n",
+       "      <td>879795543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>276</td>\n",
+       "      <td>1090</td>\n",
+       "      <td>1</td>\n",
+       "      <td>874795795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>13</td>\n",
+       "      <td>225</td>\n",
+       "      <td>2</td>\n",
+       "      <td>882399156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>12</td>\n",
+       "      <td>203</td>\n",
+       "      <td>3</td>\n",
+       "      <td>879959583</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       user  item  rating  timestamp\n",
+       "0       196   242       3  881250949\n",
+       "1       186   302       3  891717742\n",
+       "2        22   377       1  878887116\n",
+       "3       244    51       2  880606923\n",
+       "4       166   346       1  886397596\n",
+       "...     ...   ...     ...        ...\n",
+       "99995   880   476       3  880175444\n",
+       "99996   716   204       5  879795543\n",
+       "99997   276  1090       1  874795795\n",
+       "99998    13   225       2  882399156\n",
+       "99999    12   203       3  879959583\n",
+       "\n",
+       "[100000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv('~/.surprise_data/ml-100k/ml-100k/u.data',\n",
     "            sep='\\t', header=None)\n",
@@ -70,27 +227,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:30:22.177460Z",
+     "start_time": "2022-04-25T19:30:22.171801Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "943"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['user'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:30:26.800807Z",
+     "start_time": "2022-04-25T19:30:26.794916Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1682"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['item'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:30:28.660275Z",
+     "start_time": "2022-04-25T19:30:28.618886Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>1.000000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.529860</td>\n",
+       "      <td>8.835289e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.125674</td>\n",
+       "      <td>5.343856e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.747247e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8.794487e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.828269e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.882600e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.932866e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              rating     timestamp\n",
+       "count  100000.000000  1.000000e+05\n",
+       "mean        3.529860  8.835289e+08\n",
+       "std         1.125674  5.343856e+06\n",
+       "min         1.000000  8.747247e+08\n",
+       "25%         3.000000  8.794487e+08\n",
+       "50%         4.000000  8.828269e+08\n",
+       "75%         4.000000  8.882600e+08\n",
+       "max         5.000000  8.932866e+08"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stats = df[['rating', 'timestamp']].describe()\n",
     "stats"
@@ -98,9 +379,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:30:32.680305Z",
+     "start_time": "2022-04-25T19:30:32.675560Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1997-09-19 20:05:10\n",
+      "1998-04-22 16:10:38\n"
+     ]
+    }
+   ],
    "source": [
     "print(dt.datetime.fromtimestamp(stats.loc['min', 'timestamp']))\n",
     "print(dt.datetime.fromtimestamp(stats.loc['max', 'timestamp']))"
@@ -108,8 +403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:30:32.878917Z",
+     "start_time": "2022-04-25T19:30:32.875435Z"
+    }
+   },
    "outputs": [],
    "source": [
     "read = surprise.Reader('ml-100k')"
@@ -117,9 +417,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-04-25T19:30:33.105254Z",
+     "start_time": "2022-04-25T19:30:33.099616Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 5)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "read.rating_scale"
    ]
@@ -296,7 +612,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python (learn-env)",
    "language": "python",
    "name": "learn-env"
   },
@@ -352,7 +668,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": true
+   "window_display": false
   }
  },
  "nbformat": 4,
